--- a/src/modules/stackables/components/bottomSheet/bottomSheet.css
+++ b/src/modules/stackables/components/bottomSheet/bottomSheet.css
@@ -21,10 +21,10 @@
 	margin: 0 0 0 28em;
 }
 .is-open-navigationRail {
-	margin: 0 0 0 5.5em;
+	margin: 0 0 0 5em;
 }
 .is-open.is-open-navigationRail {
-	margin: 0 0 0 33.5em;
+	margin: 0 0 0 33em;
 }
 .tool-container__close-button {
 	margin: 0;
